# ai-ask

./: .eslintignore  .gitignore  .npmrc  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CHANGELOG_CURRENT.md  CLAUDE.md  LICENSE  PROJECT.md  README.md  USAGE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  test-injection-script.html  test-simple.html  tsconfig.json  vite.config.js  vitest.config.ts
.github/: copilot-instructions.md
.github/prompts/: code-review.prompt.md  speckit.plan.prompt.md
.github/scripts/: changelog-template.md  generate-changelog.js  generate-release-notes.js  sync-version.js  validate-version.js
.github/workflows/: build-desktop.yml  build-mobile.yml  release.yml  version-check.yml
.specify/memory/: constitution.md
docs/: TRANSLATION_INJECTION.md  TRANSLATION_INJECTION_SUMMARY.md  webview-injection-guide.md  webview-injection-readme.md
scripts/: check-i18n-parity.mjs  setup-supabase.mjs
scripts/release/: build-android.sh  build-ios.sh  prepare-release.sh  test-build.sh
specs/001-auto-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-github-release/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-github-release/checklists/: requirements.md
specs/001-quick-ask/: IMPLEMENTATION_SUMMARY.md  PROGRESS_REPORT.md  plan.md  pr-description.md  pre-commit-checklist.md  quickstart.md  spec.md  tasks.md
specs/001-quick-ask/checklists/: requirements.md
src/: App.svelte  app.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: child-webviews.json  default.json  desktop-notes.json  mobile.json  quick-ask.json  selection-result.json  selection-toolbar.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop_notes.rs  global_selection.rs  lib.rs  main.rs  proxy.rs  quick_ask.rs  selection_toolbar.rs  update.rs  updater.rs  utils.rs  webview.rs  window_control.rs
src/lib/: ConfigPanel.svelte  SearchResult.svelte  SelectionMonitor.svelte
src/lib/__tests__/: app-state.test.ts  child-webview.test.ts  childWebview.test.ts  clipboard.test.ts  desktop-note-markdown.test.ts  desktop-notes-store.test.ts  hotkey.test.ts  i18n-parity.test.ts  injection-format.test.ts  injection.test.ts  notes-sync.test.ts  platforms-store.test.ts  proxy.test.ts  quick-ask-store.test.ts  quick-ask.test.ts  selection-actions.test.ts  setup.ts  sticky-note-e2e.test.ts  storage.test.ts  supabase.test.ts  timing.test.ts  translation-helpers.test.ts  translation-store.test.ts  update-store.test.ts  update-utils.test.ts
src/lib/components/common/: Button.svelte  GlobalSelectionMonitor.svelte  LoadingSpinner.svelte  UpdateBanner.svelte
src/lib/components/examples/: InjectionExample.svelte
src/lib/components/layout/: Header.svelte  MainContent.svelte  Sidebar.svelte
src/lib/components/pages/: AIChat.svelte  AIChatPage.svelte  DebugInjectionPage.svelte  QuickAsk.svelte  SelectionResultPage.svelte  SelectionToolbar.svelte  SelectionToolbarPage.svelte  TranslationPage.svelte  WelcomePage.svelte
src/lib/components/settings/: AboutSettings.svelte  DesktopNotesSettings.svelte  GeneralSettings.svelte  PlatformSettings.svelte  ProxySettings.svelte  QuickAskSettings.svelte  SettingsModal.svelte  SettingsPage.svelte  TranslationSettings.svelte
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en-US.ts  ja-JP.ts  ko-KR.ts  zh-CN.ts
src/lib/stores/: app.svelte.ts  config.svelte.ts  desktop-notes.svelte.ts  platforms.svelte.ts  quick-ask.svelte.ts  response-monitor.svelte.ts  toolbar.svelte.ts  translation.svelte.ts  update.svelte.ts
src/lib/styles/: base.css  global.css
src/lib/types/: config.ts  desktop-note.ts  injection.ts  platform.ts  update.ts
src/lib/utils/: childWebview.ts  clipboard.ts  constants.ts  desktop-note-bounds.ts  desktop-note-markdown.ts  hotkey.ts  injection-format.ts  injection-templates.ts  injection.ts  logger.ts  notes-sync.ts  preload.ts  proxy.ts  selection-actions.ts  selection-bridge.ts  storage.ts  supabase.ts  translation-helpers.ts  update-manager.svelte.ts  update.ts  webview-events.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/quick-ask/: +page.svelte
src/routes/sticky-note/: +page.svelte
src/routes/toolbar/: +page.svelte
src/routes/toolbar-result/: +layout.ts  +page.svelte
src/types/: marked.d.ts  turndown-plugin-gfm.d.ts
supabase/migrations/: 001_desktop_notes.sql
