[package]
name = "ai-ask"
version = "0.0.1-beta.6"
description = "AI Ask - 一个简洁高效的AI问答助手"
authors = ["AI Ask Team"]
edition = "2021"

[lib]
name = "ai_ask_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "unstable"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-store = "2.4.2"
tauri-plugin-shell = "2.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
log = "0.4.29"
env_logger = "0.11.10"
anyhow = "1.0.102"
semver = "1.0.28"
time = { version = "0.3.47", features = ["formatting"] }

# 仅桌面平台依赖
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "unstable"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
rdev = "0.5"
arboard = "3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "native-tls",
    "system-proxy",
] }

# Android 平台依赖
[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# iOS 平台依赖
[target.'cfg(target_os = "ios")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.2"
core-foundation = "0.10"
core-graphics = "0.25"

[dev-dependencies]
tempfile = "3.27.0"

# Debug profile 优化（用于 Android debug 构建）
[profile.dev]
opt-level = "s"  # 优化体积

[profile.dev.package."*"]
opt-level = "s"  # 依赖也优化体积

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
